[gd_scene load_steps=7 format=3 uid="uid://bqm46ojgig2tc"]

[ext_resource type="Script" uid="uid://bmwej4qxpquu" path="res://Scripts/final_scene.gd" id="1_fi7pp"]
[ext_resource type="Texture2D" uid="uid://b8rv5yce6se3c" path="res://assets/img/Green.png" id="2_fi7pp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_853f1"]
texture = ExtResource("2_fi7pp")
modulate_color = Color(0.366595, 0.366595, 0.366595, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ay78q"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi7pp"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26gof"]

[node name="FinalScene" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -43.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fi7pp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -37.0
offset_right = 42.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_853f1")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.465
anchor_top = 0.547
anchor_right = 0.465
anchor_bottom = 0.547
offset_left = -217.255
offset_top = -141.05
offset_right = 301.745
offset_bottom = 79.95
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Auto Survivor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndLabel" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Congratulations, you found the remedy!"

[node name="MainButtons" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Restart" type="Button" parent="VBoxContainer2/MainButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ay78q")
text = "Restart"

[node name="MenuPrincipal" type="Button" parent="VBoxContainer2/MainButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_fi7pp")
text = "Menu Principal"

[node name="Exit" type="Button" parent="VBoxContainer2/MainButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_26gof")
text = "Exit"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -23.0
offset_right = 2.0
grow_horizontal = 0
grow_vertical = 0
text = "Aboubacar Diallo"

[connection signal="pressed" from="VBoxContainer2/MainButtons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer2/MainButtons/MenuPrincipal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="VBoxContainer2/MainButtons/Exit" to="." method="_on_exit_pressed"]
